name:                day11
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/githubuser/day11#readme
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/githubuser/day11#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Input
  build-depends:       base >= 4.7 && < 5
                     , grid
                     , split
  default-language:    Haskell2010

test-suite day11-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , day11
                     , HUnit
                     , grid
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/day11
